deploy/k8s/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: smartdesk-canary
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
